2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build maint] Don't bundle modsup.h; copy 3 macros from it, instead.

	* gi.h [!HAVE_GUILE_MODSUP_H] (GH_DEFPROC): New macro.
	[!HAVE_GUILE_MODSUP_H] (GH_MODULE_LINK_FUNC, GH_STONED): Likewise.
	* modsup.h.snap: Delete file.
	* Makefile.am (EXTRA_DIST): Delete var.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move guile abstractions from libpq.c to gi.h.

	* libpq.c (NOINTS, INTSOK, GIVENP, NOT_FALSEP, DEFAULT_FALSE)
	(RETURN_FALSE, RETURN_UNSPECIFIED, ASSERT, ASSERT_STRING, ROZT_X)
	(ROZT, MAX_NEWSTRING_LENGTH, SMOBDATA, PCHAIN, ERROR, MEMORY_ERROR)
	(SYSTEM_ERROR, WBPORT): Move from here...
	* gi.h (NOINTS, INTSOK, GIVENP, NOT_FALSEP, DEFAULT_FALSE)
	(RETURN_FALSE, RETURN_UNSPECIFIED, ASSERT, ASSERT_STRING, ROZT_X)
	(ROZT, MAX_NEWSTRING_LENGTH, SMOBDATA, PCHAIN, ERROR, MEMORY_ERROR)
	(SYSTEM_ERROR, WBPORT): ...to here.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Decruft: Don't #define __func__.

	* libpq.c (__func__): Delete #define
	and surrounding preproc conditionals.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build inst] Add support for "no C module" mode.

	* Makefile.am (d_LTLIBRARIES): Conditionalize with ‘USE_CMOD’.
	[!USE_CMOD] (pkglib_LTLIBRARIES, d_DATA): New vars.
	[!USE_CMOD] (postgres.exports, postgres): New targets.
	(install-data-hook): Conditionalize sofix invocation with ‘USE_CMOD’.
	(install-data-hook) [USE_CMOD]: Don't use $(mkmodcat);
	instead, invoke "$(GUILE_TOOLS) make-module-catalog" directly.
	(install-data-hook) [!USE_CMOD]: Add commands to generate
	and install an in-tree Scheme wrapper, if ‘FOR_MAKE_CHECK’ set.
	(DISTCLEANFILES): Add postgres.exports.
	(CLEANFILES): Add postgres.
	* libpq.c (scm_init_database_postgres_module):
	Conditionalize this GH_MODULE_LINK_FUNC with ‘ifdef USE_CMOD’.
	[!USE_CMOD] (guile_pg_init_database_postgres_module): New func.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>
